--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jhc/002/b/index.xhtml
@@ -248,7 +248,7 @@
 										</tbody>
 									</table>
 								</div>
-								<div class="table ">
+								<div class="table" id="table2">
 									<table id="fixed-table2">
 										<colgroup>
 											<com:ko-if bind="_.includes(level(),1)">
