--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -284,7 +284,7 @@
 																							constraint: 'AnnualLeaveGrantDay', 
 																							option:  optionNoOfHolidays, 
 																							required: true, 
-																							enable: canFlex() &amp;&amp; !lockDisableFlex(), 
+																							enable: canFlex() &amp;&amp; !lockDisableFlex() &amp;&amp; indentityMonth().show26, 
 																							readonly: false 
 																						} ">
                                                                 </input>
@@ -297,7 +297,7 @@
 																						value: fst.absentDeductionTime, 
 																						inputFormat: 'time', 
 																						mode: 'time', 
-																						enable: canFlex() &amp;&amp; !lockDisableFlex(), 
+																						enable: canFlex() &amp;&amp; !lockDisableFlex() &amp;&amp; indentityMonth().show26, 
 																						readonly: false, 
 																						required: true
 																					}"></input>
