--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/m/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/m/index.xhtml
@@ -35,7 +35,7 @@
 			<button data-bind = "click: changeToNewMode, enable: !$vm.isNewMode()" tabindex="1">#{i18n.getText('QMM017_1')}</button>
 			<button data-bind = "click: register, enable: $root.errors.isEmpty" tabindex="2" class="proceed">#{i18n.getText('QMM017_2')}</button>
 			<button data-bind = "enable: false" tabindex="3">#{i18n.getText('QMM017_3')}</button>
-			<button data-bind = "enable: false" tabindex="4">#{i18n.getText('QMM017_4')}</button>
+			<button data-bind = "click: exportExcel" tabindex="4">#{i18n.getText('QMM017_4')}</button>
 			<button data-bind = "enable: false" tabindex="5">#{i18n.getText('QMM017_5')}</button>
 			<button data-bind = "enable: true, click: closeScreenM" tabindex="5">#{i18n.getText('QMM017_146')}</button>
 		</div>
