CPS003F:  validate combox && button

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/index.xhtml
@@ -17,6 +17,7 @@
 			
 			<com:scriptfile path="cm/value-ko-ext.js" />
 			<com:scriptfile path="cm/filter-ko-ext.js" />
+			<com:scriptfile path="cm/validate.js" />
 			<com:stylefile path="cps003.f.style.css" />
 			<com:scriptfile path="cps003.f.service.js" />
 			<com:scriptfile path="cps003.f.vm.js" />
