--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
@@ -306,4 +306,25 @@
       border-color: #424542;
     }
   }
+  &.time,
+  &.clock {
+    .ipkr-content {
+      &:before {
+        content: ':';
+        position: absolute;
+        top: 133px;
+        left: 175px;
+        font-size: 26px;
+        color: #666;
+      }
+    }
+    .ipkr-col:nth-child(2),
+    .ipkr-col:nth-child(4) {
+      margin-right: 0.2em;
+    }
+    .ipkr-col:nth-child(3),
+    .ipkr-col:nth-child(5) {
+      margin-left: 0.2em;
+    }
+  }
 }
