fix bug #108079 ver 2

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index1.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index1.xhtml
@@ -79,7 +79,7 @@
 										<span class="limited-label" 
 										style="width: 111px;" 
 										data-bind="text: ko.pureComputed(function(){
-											if($data.approvalAtrValue()!=0){
+											if($data.approvalAtrValue()==1){
 												return $data.approvalDate();
 											}
 										})"></span>
