--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
@@ -263,7 +263,7 @@
       -ms-flex: 1;
       flex: 1;
     }
-    .ipkr-navbar-btn:nth-child(2) {
+    .ipkr-navbar-btn:nth-child(n + 1) {
       border-left: 1px solid #d9d4d4;
     }
   }
