add sample card group (show like label group)

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -9,6 +9,7 @@
 @import './lumen/ripple.scss';
 
 @import './lumen/container.scss';
+@import './lumen/card.scss';
 @import './lumen/modal.scss';
 @import './lumen/label.scss';
 @import './lumen/input.scss';
