--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/index.xhtml
@@ -90,7 +90,7 @@
 				</div>				
 			</div>
 			<div id="functions-area-bottom">
-				<button class="proceed x-large" data-bind="click: $vm.pushData">#{i18n.getText('CPS003_96')}</button>
+				<button class="proceed x-large" data-bind="click: $vm.pushData, , enable: $root.errors.isEmpty()">#{i18n.getText('CPS003_96')}</button>
 				<button data-bind="click: close">#{i18n.getText('CPS003_97')}</button>
 			</div>
 		</ui:define>
