add show mask on modal

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
@@ -1,6 +1,9 @@
 .modal {
   //-webkit-overflow-scrolling: touch;
   &-backdrop {
+    &.modal-frontdrop {
+      z-index: 1050;
+    }
     &.show {
       opacity: 0.05;
       .spinner {
