--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/md.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/md.scss
@@ -315,10 +315,10 @@ $material-colors: (
 @each $color-name, $color-variants in $material-colors {
     @each $color-variant, $hex-value in $color-variants {
         .text-#{$color-name}-#{$color-variant} {
-            color: #{$hex-value};
+            color: #{$hex-value} !important;
         }
         .bg-#{$color-name}-#{$color-variant} {
-            background-color: #{$hex-value};
+            background-color: #{$hex-value} !important;
 
             &.swatch-title,
             &.color-swatch {
@@ -332,6 +332,9 @@ $material-colors: (
                     right: 3px;
                 }
             }
+        }
+        .border-#{$color-name}-#{$color-variant} {
+          border-color: #{$hex-value} !important;
         }
 
         @if $color-variant == '500' {
