--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
@@ -1,251 +1,143 @@
-.bg {
-    &-green {
-        background-color: $bg-green;
-    }
+$uk-bg-colors: (
+    green: #E0F59E,
+    yellow: #F7EFD4,
+    active: #00B050,
+    link-button: #E0F59E,
+    checkbox: #2FCC71,
+    radio: #97D155,
+    hover: #F2F2F2,
+    danger: #FED3C6,
+    danger-hover: #FEC0AD,
+    process: #A4EEB0,
+    process-hover: #79E68B,
+    disable: #D9D9D9,
+    daily-alter-self: #94B7FE,
+    daily-alter-other: #030303,
+    daily-reflect-application: #92F29B,
+    daily-error: #FEC6C6,
+    daily-alarm: #E3F385,
+    daily-calculated:#E4C9FF,
+    schedule-saturday: #8BD8FF,
+    schedule-sunday: #FABF8F,
+    schedule-support: #FEDFE6,
+    schedule-no-empl-insurance: #EF7F7F,
+    schedule-no-health-insurance: #ACFE2F,
+    schedule-no-empl-health-insurance: #FEA400,
+    schedule-fixed: #ECCEFB,
+    schedule-uncorrectable: #DDDDD2,
+    schedule-work-by-dow: #FFFF69,
+    schedule-specific-date: #FFC0CB,
+    schedule-that-day: #FFFF00,
+    schedule-focus: #FFFFCC,
+    choice-row: #CEE6FF,
+    calendar-ym-set: #BFEA60,
+    workink-result-excess: #FFFF00,
+    pre-application-excess: #FFC0CB,
+    application-approved:#BFEA60,
+    application-reflected: #CEE6FF,
+    unapproved-application: #FFFFFF,
+    remanded-application: #FD4D4D,
+    canceled-application: #F6F636,
+    weekdays: #D9D9D9,
+    pasted: #F8CBAD,
+    updating-cell: #FFD966,
+    selecting: #BDD7EE,
+    added-row:#AFEEEE,
+    actual-superior-unverified: #FF7F27,
+    error-actual: #FF7F27
+);
 
-    &-yellow {
-        background-color: $bg-yellow;
-    }
+$uk-fg-colors: (
+    proceed: #00B050,
+    info: #BFEA60,
+    danger: #C12017,
+    active: #97D155,
+    required: #FFD966,
+    disabled: #AAAAAA,
+    link-button: #0D86D1,
+    working-day: #31859C,
+    non-working-day: #FF3B3B,
+    attendance: #0000FF,
+    holiday: #FF0000,
+    daily-holiday: #FF2D2D,
+    daily-extra-holiday: #0086EA,
+    schedule-performance: #92D050,
+    schedule-error: #FF0000,
+    schedule-saturday: #0000FF,
+    schedule-sunday: #FF0000,
+    half-day-work: #FF7F27,
+    operation-case-character:#FF0000,
+    working-schedule: #00CC00,
+    sunday: #FF2D2D,
+    saturday: #0086EA,
+    weekdays: #404040
 
-    &-danger {
-        background-color: $bg-danger;
+);
 
-        &:hover {
-            background-color: $bg-danger-hover;
-        }
-    }
+$uk-colors: (
+    teal: #5DA797,
+    sea-green: #8fcb9b,
+    olive: #c3d69b,
+    remark: #c3d69b,
+    light-olive: #dcedc8,
+    headline: #dcedc8,
+    accordion: #dcedc8,
+    reflect: #e4f2c9,
+    dark-gray: #666666,
+    sub-label: #666666,
+    over-time: #666666,
+    gray: #999999,
+    light-gray: #cccccc,
+    lighten-gray: #e0e0e0,
+    white-smoke: #eeeeee,
+    silver: #f9f9f9,
+    white: #ffffff,
+    orange: #ffcc88,
+    papaya-whip: #ffedc8,
+    approval: #ffedc8,
+    yellow: #fac002,
+    light-yellow: #ffee66,
+    khaki: #f9f0ac,
+    saddle-brow: #804800,
+    rosy-brown: #963d40,
+    red: #ff0000,
+    sunday: #ff0000,
+    crimson: #dc474b,
+    light-coral:#ffd8da,
+    dark-salmon: #f2dcdb,
+    blue:#0000ff,
+    statuday:#0000ff,
+    medium-blue:#29339b,
+    steel-blue:#5c73a5,
+    royal-blue:#4f81bd,
+    sky-blue:#6cc0e5,
+    light-blue:#93cddd,
+    powder-blue:#d7f2ff,
+    alice-blue:#c6d9f1
+);
 
-    &-process {
-        background-color: $bg-process;
-
-        &:hover {
-            background-color: $bg-process-hover;
-        }
-    }
-
-    &-daily-alter-self {
-        background-color: $bg-daily-alter-self;
-    }
-
-    &-daily-alter-other {
-        background-color: $bg-daily-alter-other;
-    }
-
-    &-daily-reflect-application {
-        background-color: $bg-daily-reflect-application;
-    }
-
-    &-daily-error {
-        background-color: $bg-daily-error;
-    }
-
-    &-daily-alarm {
-        background-color: $bg-daily-alarm;
-    }
-
-    &-daily-calculated {
-        background-color: $bg-daily-calculated;
-    }
-
-    &-schedule-saturday {
-        background-color: $bg-schedule-saturday;
-    }
-
-    &-schedule-sunday {
-        background-color: $bg-schedule-sunday;
-    }
-
-    &-schedule-support {
-        background-color: $bg-schedule-support;
-    }
-
-    &-schedule-no-empl-insurance {
-        background-color: $bg-schedule-no-empl-insurance;
-    }
-
-    &-schedule-no-health-insurance {
-        background-color: $bg-schedule-no-health-insurance;
-    }
-
-    &-schedule-no-empl-health-insurance {
-        background-color: $bg-schedule-no-empl-health-insurance;
-    }
-
-    &-schedule-fixed {
-        background-color: $bg-schedule-fixed;
-    }
-
-    &-schedule-uncorrectable {
-        background-color: $bg-schedule-uncorrectable;
-    }
-
-    &-schedule-work-by-dow {
-        background-color: $bg-schedule-work-by-dow;
-    }
-
-    &-schedule-specific-date {
-        background-color: $bg-schedule-specific-date;
-    }
-
-    &-schedule-that-day {
-        background-color: $bg-schedule-that-day;
-    }
-
-    &-schedule-focus {
-        background-color: $bg-schedule-focus;
-    }
-
-    &-choice-row {
-        background-color: $bg-choice-row;
-    }
-
-    &-calendar-ym-set {
-        background-color: $bg-calendar-ym-set;
-    }
-
-    &-workinh-result-excess {
-        background-color: $bg-workinh-result-excess;
-    }
-
-    &-pre-application-excess {
-        background-color: $bg-pre-application-excess;
-    }
-
-    &-application-approved {
-        background-color: $bg-application-approved;
-    }
-
-    &-application-reflected {
-        background-color: $bg-application-reflected;
-    }
-
-    &-unapproved-application {
-        background-color: $bg-unapproved-application;
-    }
-
-    &-remanded-application {
-        background-color: $bg-remanded-application;
-    }
-
-    &-canceled-application {
-        background-color: $bg-canceled-application;
-    }
-
-    &-weekdays {
-        background-color: $bg-weekdays;
-    }
-
-    &-pasted {
-        background-color: $bg-pasted;
-    }
-
-    &-updating-cell {
-        background-color: $bg-updating-cell;
-    }
-
-    &-selecting {
-        background-color: $bg-selecting;
-    }
-
-    &-added-row {
-        background-color: $bg-added-row;
-    }
-
-    &-actual-superior-unverified {
-        background-color: $bg-actual-superior-unverified;
-    }
-
-    &-error-actual {
-        background-color: $bg-error-actual;
-    }
+@each $color-name, $hex-value in $uk-bg-colors {
+    .uk-bg-#{$color-name} {        
+        background-color: #{$hex-value};
+    }    
 }
 
-.color {
-    &-info {
-        color: $color-info;
+@each $color-name, $hex-value in $uk-fg-colors {
+    .uk-text-#{$color-name} {        
+        background-color: #{$hex-value};
+    }    
+}
+
+@each $color-name, $hex-value in $uk-colors {
+    .uk-text-#{$color-name} {
+        color: #{$hex-value};
     }
 
-    &-danger {
-        color: $color-danger;
+    .uk-bg-#{$color-name} {        
+        background-color: #{$hex-value};
     }
 
-    &-active {
-        color: $color-active;
-    }
-
-    &-proceed {
-        color: $color-proceed;
-    }
-
-    &-required {
-        color: $color-required;
-    }
-
-    &-disable {
-        color: $color-disabled;
-    }
-
-    &-working-day {
-        color: $color-working-day;
-    }
-
-    &-non-working-day {
-        color: $color-non-working-day;
-    }
-
-    &-attendance {
-        color: $color-attendance;
-    }
-
-    &-holiday {
-        color: $color-holiday;
-    }
-
-    &-daily-holiday {
-        color: $color-daily-holiday;
-    }
-
-    &-daily-extra-holiday {
-        color: $color-daily-extra-holiday;
-    }
-
-    &-schedule-performance {
-        color: $color-schedule-performance;
-    }
-
-    &-schedule-error {
-        color: $color-schedule-error;
-    }
-
-    &-schedule-saturday {
-        color: $color-schedule-saturday;
-    }
-
-    &-schedule-sunday {
-        color: $color-schedule-sunday;
-    }
-
-    &-half-day-work {
-        color: $color-half-day-work;
-    }
-
-    &-operation-case-character {
-        color: $color-operation-case-character;
-    }
-
-    &-working-schedule {
-        color: $color-working-schedule;
-    }
-
-    &-sunday {
-        color: $color-sunday;
-    }
-
-    &-saturday {
-        color: $color-saturday;
-    }
-
-    &-weekdays {
-        color: $color-weekdays;
+    .uk-border-#{$color-name} {
+        border-color: #{$hex-value};
     }
 }
