--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
@@ -9,8 +9,8 @@ body {
             max-width: 250px;
             min-height: 100vh;
             margin-left: -250px;
-            background-color: $primary;
-            border-left: 1px solid darken($color: $primary, $amount: 5);
+            background-color: $bg-menu-color;
+            border-left: 1px solid darken($color: $bg-menu-color, $amount: 5);
             transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
 
             .sidebar-header {
@@ -116,17 +116,17 @@ body {
                 &:hover {
                     cursor: pointer;
                     text-decoration: none;
-                    background-color: darken($color: $primary, $amount: 5);
+                    background-color: darken($color: $bg-menu-color, $amount: 5);
                 }
             }
 
             .collapse {
                 &.show {
-                    background-color: darken($color: $primary, $amount: 5);
+                    background-color: darken($color: $bg-menu-color, $amount: 5);
 
                     a {
                         &:hover {
-                            background-color: darken($color: $primary, $amount: 10);
+                            background-color: darken($color: $bg-menu-color, $amount: 10);
                         }
                     }
                 }
@@ -209,13 +209,13 @@ body {
                 }
 
                 ul.components {
-                    border-top: 4px solid darken($color: $primary, $amount: 5);
+                    border-top: 4px solid darken($color: $bg-menu-color, $amount: 5);
                 }
 
                 &.show {
                     margin-left: 0;
                     transform: none;
-                    border-right: 1px solid darken($color: $primary, $amount: 5);
+                    border-right: 1px solid darken($color: $bg-menu-color, $amount: 5);
 
                     ul {
                         &.components {
@@ -234,7 +234,7 @@ body {
         .wrapper {
             .sidebar {
                 //position: relative;
-                border-right: 2px solid darken($color: $primary, $amount: 5);
+                border-right: 2px solid darken($color: $bg-menu-color, $amount: 5);
             }
         }
     }
