add step wizard control and sample

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -27,6 +27,7 @@
 @import './lumen/floatbtn.scss';
 @import './lumen/picker.scss';
 @import './lumen/fx-table.scss';
+@import './lumen/step-wizard.scss';
 
 @import './lumen/transition.scss';
 @import './lumen/time-range-search-box.scss';
