add to top page control and sample

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -28,6 +28,7 @@
 @import './lumen/picker.scss';
 @import './lumen/fx-table.scss';
 @import './lumen/step-wizard.scss';
+@import './lumen/to-toppage.scss';
 
 @import './lumen/transition.scss';
 @import './lumen/time-range-search-box.scss';
