--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/accordion.scss
@@ -12,6 +12,11 @@
         right: 1rem;
         transition: all 0.6s cubic-bezier(0.81, -0.33, 0.345, 1.375);
       }
+      &.db-caret-down {
+        &:before {
+          content: '\f103';
+        }
+      }
       .btn-link {
         color: $dark;
         display: block;
