--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
@@ -4,14 +4,14 @@
       background-color: #fff;
     }
     &.input-group-search {
-      .fa {
-        color: #fff;
-      }
       .input-group-append {
         z-index: 99;
       }
-      .form-control {
-        color: #fff;
+      &.text-white {
+        .fa,
+        .form-control {
+          color: #fff;
+        }
       }
     }
 
