--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
@@ -14,7 +14,6 @@
         }
       }
     }
-
     .input-group-prepend,
     .input-group-append {
       position: absolute;
@@ -54,6 +53,24 @@
         padding-right: 32px;
       }
     }
+  }
+
+  &.input-group-time {
+    .form-control {
+      padding: 0;
+      border-right-color: transparent;
+      .row {
+        line-height: 33px;
+      }
+    }
+    .input-group-text {
+      border-left: 0;
+      background-color: transparent;
+      box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.075);
+      &.fa {
+        font-weight: 600;
+      }
+    }  
   }
 
   &.input-group-transparent {
