--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
@@ -27,19 +27,19 @@
     </ui:define>
 
     <ui:define name="content">
-        <div id="com-ccg001"></div>
         <div id="functions-area">
             <button id="A1_1" class="proceed" tabindex="1" style="margin-left: 110px;"
-                    data-bind="click: updateStatementItemName">#{i18n.getText('QMM038_2')}</button>
+                    data-bind="click: updateStatementItemName, enable: $root.errors.isEmpty">#{i18n.getText('QMM038_2')}</button>
             <button id="A1_2" data-bind="enable: false" tabindex="2">#{i18n.getText('QMM038_3')}</button>
         </div>
         <div id="contents-area">
+            <div id="com-ccg001"></div>
             <div style="margin-left: 90px; border: 0.2px solid; border-color: #DCDCDC; width: 300px; padding: 14px;border-style:solid;">
                 <div id="A2_2"
                      data-bind="ntsFormLabel: { constraint: '', required: true }">#{i18n.getText('QMM038_4')}</div>
                 <div id="A2_3" tabindex="3"
                      data-bind="ntsDatePicker: {value: giveCurrTreatYear, dateFormat: 'yearmonth', name: '#[QMM038_4]',required: true}"></div>
-                <button id="A2_4" class="small" data-bind="click: findByEmployee, enable: $root.errors.isEmpty"
+                <button id="A2_4" class="small" data-bind="click: findByEmployee"
                         tabindex="4">#{i18n.getText('QMM038_5')}</button>
             </div>
             <div style="margin: 19px 19px 19px 89px; width: 50px" tabindex="6">
