--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
@@ -56,19 +56,42 @@
   }
 
   &.input-group-time {
+    .input-group-prepend {
+      &+.form-control {
+        border-left-color: transparent;
+      }
+      .input-group-text {
+        border-right: 0;
+      }
+    }
+    .input-group-append {
+      .input-group-text {
+        border-left: 0;
+      }
+    }
     .form-control {
       padding: 0;
-      border-right-color: transparent;
+      &:not(:last-child) {
+        border-right-color: transparent;
+      }
       .row {
         line-height: 33px;
+        [class^=col-] {
+          font-size: 0.8rem;
+        }
+      }
+      &.is-invalid {
+        background-image: none;
       }
     }
     .input-group-text {
-      border-left: 0;
       background-color: transparent;
       box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.075);
       &.fa {
         font-weight: 600;
+      }
+      &.is-invalid {
+        border-color: $form-feedback-invalid-color;
       }
     }  
   }
@@ -103,6 +126,14 @@
         box-shadow: $input-focus-box-shadow;
         border-color: $input-focus-border-color;
       }
+    }
+  }
+}
+
+.form-group {
+  &.is-invalid {
+    +.invalid-feedback {
+      display: block;
     }
   }
 }
