QMM036: #125987 setting CCG001

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/index.xhtml
@@ -45,13 +45,13 @@
                         data-bind="click: registration, enable: isRegistrationable() &amp;&amp; $root.errors.isEmpty"
                         class="proceed">#{i18n.getText('QMM036_2')}</button>
             </div>
+            <!--A3_2-->
+            <div id="com-ccg001"></div>
             <div class="contents-area">
                 <div style="display: table; margin: 15px 0px 15px 65px; width: 915px;">
                     <!--A3_1-->
                     <div tabindex="2" id="emp-component" style="display: table-cell;"></div>
                 </div>
-                <!--A3_2-->
-                <div tabindex="3" id="com-ccg001"></div>
                 <div class="row">
                     <div class="cell group-master">
                         <div class="panel" style="margin-left: 30px"
