--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
@@ -2,6 +2,8 @@ body {
     .navbar {
         padding: 0;
         z-index: 1050;
+        border-left: 0;
+        border-right: 0;
         padding-left: 35px;
         transition: all 0.6s cubic-bezier(0.810, -0.330, 0.345, 1.375);
         cursor: pointer;
@@ -86,9 +88,10 @@ body {
     .container-fluid {
         .navbar {
             display: block;
-            border-width: 0;
             padding: 2px 15px;
-
+            .navbar-brand {
+                padding-left: 5px;
+            }
             .row {
                 div[class^=col]:first-child {
                     padding-left: 45px;
