update modal close/back button

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
@@ -95,6 +95,13 @@
 
     .modal-dialog {
       &.modal-info {
+        .modal-header {
+          .modal-title {
+            .fas {
+              display: none;
+            }
+          }
+        }
         &.type {
           &-info {
             .modal-content {
