--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/listgroup.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/listgroup.scss
@@ -56,6 +56,18 @@
             }
         }
     }
+    &-xs {
+        .list-group-item {
+            padding: 0.25rem;
+            font-size: 0.75rem;
+        }
+    }
+    &-sm {
+        .list-group-item {
+            padding: 0.5rem;
+            font-size: 0.8rem;
+        }
+    }
 }
 
 @for $i from 1 through 10 {
@@ -66,6 +78,28 @@
                 
                 .collapse {
                     left: #{$i * 30 - 22}px;
+                }
+            }
+        }
+        &.list-group-xs {
+            .list-group-item {
+                &.indent-#{$i} {
+                    padding-left: #{$i * 20}px;
+                
+                    .collapse {
+                        left: #{$i * 20 - 20}px;
+                    }
+                }
+            }
+        }
+        &.list-group-sm {
+            .list-group-item {
+                &.indent-#{$i} {
+                    padding-left: #{$i * 25}px;
+                
+                    .collapse {
+                        left: #{$i * 25 - 20}px;
+                    }
                 }
             }
         }
