--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/sidemenu.scss
@@ -5,13 +5,16 @@ body {
             color: #fff;
             z-index: 1051;
             position: fixed;
-            min-width: 250px;
-            max-width: 250px;
+            min-width: 300px;
+            max-width: 300px;
             min-height: 100vh;
-            margin-left: -250px;
+            margin-left: -300px;
             background-color: $bg-menu-color;
+            -webkit-overflow-scrolling: touch;
             border-left: 1px solid darken($color: $bg-menu-color, $amount: 5);
             transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+            display: flex;
+            flex-flow: column;
 
             .sidebar-header {
                 display: flex;
@@ -23,7 +26,7 @@ body {
                 h3 {
                     flex: 1;
                     margin: 0;
-                    padding: 4px;
+                    padding-left: 4px;
 
                     a {
                         color: #fff;
@@ -31,12 +34,21 @@ body {
 
                         span {
                             color: #fff;
+                            font-size: 1.4rem;
+                            &:first-child  {
+                                line-height: 40px;
+                            }
+                            &.small {
+                                font-size: 0.9rem;
+                                margin-right: -40px;
+                            }
                         }
                     }
                 }
 
                 .navbar-btn {
                     width: 40px;
+                    height: 38px;
                     cursor: pointer;
                     color: #fff;
                     padding: 0;
@@ -62,8 +74,7 @@ body {
                 &.components {
                     cursor: pointer;
                     overflow-y: auto;
-                    padding-bottom: 25px;
-                    -webkit-overflow-scrolling: touch;
+                    padding-bottom: 50px;
                     max-height: calc(100vh - 40px);
 
                     .dropdown-toggle::after {
@@ -101,7 +112,7 @@ body {
                         }
 
                         &.show:after {
-                            transform: rotate(180deg) translate(2px, 2px);
+                            transform: rotate(180deg) translate(0px, 2px);
                         }
                     }
                 }
@@ -133,6 +144,10 @@ body {
                         }
                     }
                 }
+            }
+
+            .prevent-scroll {
+                flex-grow: 1;
             }
         }
     }
