--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
@@ -136,6 +136,21 @@
       display: block;
     }
   }
+  &-range {
+    >.col-6:last-child {
+      .form-group {
+        &:first-child {
+          &:before {
+            content: '～';
+            display: block;
+            position: absolute;
+            top: 7px;
+            left: -7px;
+          }
+        }
+      }
+    }
+  }
 }
 
 .time-picker {
