--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
@@ -6,7 +6,7 @@
 
 <body>
 
-<ui:composition template="../../../../master/sidebar.xhtml">
+<ui:composition template="../../../../master/base.xhtml">
     <ui:define name="htmlHead">
         <com:stylefile path="/view/ccg/share/style.css" of="/nts.uk.com.web"/>
         <com:scriptfile set="IGNITE"/>
