--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
@@ -233,6 +233,13 @@ $uk-status-color: (
         display: inline-block;
         border-radius: 0.25rem;
 
+        &:hover,
+        &:focus {
+            color: $fg-color;
+            border: 1px solid $bd-color;
+            background-color: $bg-color;            
+        }
+
         &.border-0 {
             border: 0;
         }
