--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/picker.scss
@@ -37,6 +37,16 @@
     float: right;
     padding: 0 1em;
     cursor: pointer;
+    &.btn {
+      border: 0;
+      border-radius: 0;
+      &:not(.disabled) {
+        &:hover,
+        &:active {
+          margin-top: 0;
+        }
+      }
+    }
   }
   .ipkr-caption {
     padding: 0.5em 0.25em 0 0.25em;
