update sample modal header  & toolbar

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/button.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/button.scss
@@ -57,5 +57,10 @@
             font-weight: 600;
         }
     }
+    &-no-content {
+        &:after {
+            content: none;
+        }
+    }
 }
 
