--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
@@ -105,6 +105,12 @@ body {
             .btn-link {
                 color: #fff;
                 text-decoration: none;
+                
+                &.dropdown-toggle {
+                    &:after{ 
+                        content: none;
+                    }
+                }
             }
         }
     }
