--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/modal.scss
@@ -94,6 +94,15 @@
     display: block;
 
     .modal-dialog {
+      .modal-header {
+        .btn-link {
+          &.dropdown-toggle {
+            &:after{ 
+                content: none;
+            }
+          }
+        }
+      }
       &.modal-info {
         .modal-header {
           .modal-title {
@@ -294,11 +303,11 @@
             min-height: calc(var(--vh, 1vh) * 100);
 
             .modal-header {
-              padding: 0.6rem 1rem;
+              padding: 0.3rem 1rem;
 
-              .modal-title {
+              /*.modal-title {
                 line-height: 1rem;
-              }
+              }*/
             }
 
             .modal-footer {
