--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
@@ -189,7 +189,7 @@ $uk-status-color: (
     }
 
     .uk-bg-#{$color-name} {        
-        background-color: #{$hex-value} !important;
+        background-color: #{$hex-value};
         &.uk-color-swatch {
             &:before {
                 content: '#{$hex-value}';
@@ -227,8 +227,8 @@ $uk-status-color: (
     .apply-#{$class-name},
     .uk-apply-#{$class-name} {
         color: $fg-color;
-        border: 1px solid $bd-color !important;
-        background-color: $bg-color !important;
+        border: 1px solid $bd-color;
+        background-color: $bg-color;
         text-align: center;
         display: inline-block;
         border-radius: 0.25rem;
@@ -236,21 +236,21 @@ $uk-status-color: (
         &:hover,
         &:focus {
             color: $fg-color;
-            border: 1px solid $bd-color !important;
-            background-color: $bg-color !important;            
+            border: 1px solid $bd-color;
+            background-color: $bg-color;            
         }
 
         &.border-0 {
             border: 0;
         }
         &.border-1 {
-            border: 1px solid $bd-color !important;
+            border: 1px solid $bd-color;
         }
         &.border-2 {
-            border: 2px solid $bd-color !important;
+            border: 2px solid $bd-color;
         }
         &.border-3 {
-            border: 1px solid $bd-color !important;
+            border: 1px solid $bd-color;
         }
         &.border-dashed {
             border-style: dashed;
