--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
@@ -108,6 +108,8 @@ td.red-color {
 tr.blue-color {
 	color: #0000FF;
 }
-.nts-help-button-image{
-	width:303px !important;
+
+.nts-help-button-image span {
+	font-size: 0.99rem;
 }
+
