--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/g/index.xhtml
@@ -27,7 +27,7 @@
 			</div>
 			<div id="contents-area" data-bind="">
 			<div id= "contents-grid" data-bind="">
-			<table id="grid2"></table>
+			<table id="grid2" tabindex="3"></table>
 				</div>
 			</div>
 		</ui:define>
