add stripped color & table

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
@@ -86,6 +86,7 @@ $uk-colors: (
     headline: #dcedc8,
     accordion: #dcedc8,
     reflect: #e4f2c9,
+    stripped: #eef9e3,
     dark-gray: #666666,
     sub-label: #666666,
     over-time: #666666,
