--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -19,6 +19,7 @@
 @import './lumen/sidemenu.scss';
 @import './lumen/checkbox.scss';
 @import './lumen/accordion.scss';
+@import './lumen/table.scss';
 @import './lumen/listgroup.scss';
 @import './lumen/code.scss';
 @import './lumen/markdown.scss';
